<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <data>
        <variable
            name="model"
            type="com.prabitha.nuomtask.contactListApp.addContactFragment.AddContactViewModel" />
    </data>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:hint="@string/hint_first_name"
        android:padding="10dp"
       >

    </EditText>

    <EditText
        android:id="@+id/LastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:padding="10dp"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:hint="@string/hint_last_name"

       />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:padding="10dp"
        android:inputType="phone"
        android:hint="@string/hint_phone_number"
        android:maxLength="10"
        />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_e_mail_address"
        android:padding="10dp"
        android:inputType="textEmailAddress"
       />

    <EditText
        android:id="@+id/editTextTextPostalAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:maxLength="100"
        android:padding="10dp"

        android:hint="@string/hint_address"
        android:maxLines="4"
        />
    <Button
        android:id="@+id/addContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/save"
         />
</LinearLayout>
</layout>
